fixed spacing

--- a/styling.css
+++ b/styling.css
@@ -3,7 +3,7 @@ html {
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Caveat&family=Indie+Flower&family=Poppins:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.6rem;
@@ -22,7 +22,7 @@ h1 {
 }
 
 h2 {
-    font-family: Arial, Helvetica, sans-serif
+    font-family: 'Special Elite', cursive;    
     font-size: 30px;
 }
 
